test(excelNinja): refactor code to be compatible with Java 8