@@ -12,7 +12,8 @@ import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
 import java.nio.file.Files;
-import java.nio.file.Path;
+import java.nio.file.Paths;
+import java.util.Arrays;
 import java.util.List;
 
 import static org.junit.jupiter.api.Assertions.*;
@@ -44,7 +45,6 @@ class ExcelWriterTest {
             this.score = score;
             this.ignore = "This field should be ignored";
         }
-
     }
 
 
@@ -52,9 +52,9 @@ class ExcelWriterTest {
         @ExcelReadColumn(headerName = "ID")
         private Long id;
         @ExcelReadColumn(headerName = "Name")
-        private  String name;
+        private String name;
         @ExcelReadColumn(headerName = "Age")
-        private  Integer age;
+        private Integer age;
         @ExcelWriteColumn(headerName = "Score")
         private Double score;
 
@@ -83,53 +83,46 @@ class ExcelWriterTest {
             this.age = age;
             this.score = score;
         }
-
     }
 
 
     @Test
     @DisplayName("Write Excel via NinjaExcel")
     void write_and_read_excel_via_NinjaExcel() throws Exception {
-        var usersToWrite = List.of(
+        List<UserWriteDto> usersToWrite = Arrays.asList(
                 new UserWriteDto(1L, "Alice123#!@#!@3", 30, 95.5),
                 new UserWriteDto(2L, "Bob", 25, 88.0)
         );
 
-        var usersToRead = List.of(
-                new UserReadDto(1L, "Alice123#!@#!@3", 30, 95.5),
-                new UserReadDto(2L, "Bob", 25, 88.0)
-        );
-
-
-        var byteArrayOutputStream = new ByteArrayOutputStream();
-        var document = ExcelDocument.createWriter(usersToWrite, "mySheetName");
+        ByteArrayOutputStream byteArrayOutputStream = new ByteArrayOutputStream();
+        ExcelDocument document = ExcelDocument.createWriter(usersToWrite, "mySheetName");
         NinjaExcel.write(document, byteArrayOutputStream);
-        var bytes = byteArrayOutputStream.toByteArray();
+        byte[] bytes = byteArrayOutputStream.toByteArray();
         assertTrue(bytes.length > 0);
 
-        try (var wb = WorkbookFactory.create(new ByteArrayInputStream(bytes))) {
-            var sheet = wb.getSheet("mySheetName");
+        try (org.apache.poi.ss.usermodel.Workbook workbook = WorkbookFactory.create(new ByteArrayInputStream(bytes))) {
+            org.apache.poi.ss.usermodel.Sheet sheet = workbook.getSheet("mySheetName");
             assertNotNull(sheet);
 
-            var header = sheet.getRow(0);
+            org.apache.poi.ss.usermodel.Row header = sheet.getRow(0);
             assertEquals("ID", header.getCell(0).getStringCellValue());
             assertEquals("Name", header.getCell(1).getStringCellValue());
             assertEquals("Age", header.getCell(2).getStringCellValue());
 
-            var row1 = sheet.getRow(1);
+            org.apache.poi.ss.usermodel.Row row1 = sheet.getRow(1);
             assertEquals(1.0, row1.getCell(0).getNumericCellValue());
             assertEquals("Alice123#!@#!@3", row1.getCell(1).getStringCellValue());
             assertEquals(30.0, row1.getCell(2).getNumericCellValue());
 
-            var row2 = sheet.getRow(2);
+            org.apache.poi.ss.usermodel.Row row2 = sheet.getRow(2);
             assertEquals(2.0, row2.getCell(0).getNumericCellValue());
             assertEquals("Bob", row2.getCell(1).getStringCellValue());
             assertEquals(25.0, row2.getCell(2).getNumericCellValue());
         }
 
-        var fileName = "/Users/hyunsoojo/users_test.xlsx";
-        NinjaExcel.write(ExcelDocument.createWriter( usersToWrite), fileName);
-        var path = Path.of(fileName);
+        String fileName = "/Users/hyunsoojo/users_test.xlsx";
+        NinjaExcel.write(ExcelDocument.createWriter(usersToWrite), fileName);
+        java.nio.file.Path path = Paths.get(fileName);
         assertTrue(Files.exists(path));
         assertTrue(Files.size(path) > 0);
 
@@ -139,18 +132,18 @@ class ExcelWriterTest {
     @Test
     @DisplayName("Read Excel via NinjaExcel")
     void read_excel_via_NinjaExcel() throws Exception {
-        var file = new File(getClass().getClassLoader().getResource("users_test.xlsx").toURI());
-        var users = NinjaExcel.read(file, UserReadDto.class);
+        File file = new File(getClass().getClassLoader().getResource("users_test.xlsx").toURI());
+        List<UserReadDto> users = NinjaExcel.read(file, UserReadDto.class);
 
         assertNotNull(users);
         assertEquals(2, users.size());
 
-        var user1 = users.getFirst();
+        UserReadDto user1 = users.get(0);
         assertEquals(1L, user1.id);
         assertEquals("Alice123#!@#!@3", user1.name);
         assertEquals(30, user1.age);
 
-        var user2 = users.get(1);
+        UserReadDto user2 = users.get(1);
         assertEquals(2L, user2.id);
         assertEquals("Bob", user2.name);
         assertEquals(25, user2.age);
